--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -5,7 +5,7 @@
 }
 
 .nav-tabs > li.open, .member-tabset > .nav-tabs > li:hover {
-  border-bottom: 4px solid #fbcdcf;
+  border-bottom: 4px solid #cdcefb;
 }
 
 .member-tabset > .nav-tabs > li.open > a, .member-tabset > .nav-tabs > li:hover > a {
@@ -23,7 +23,7 @@
 }
 
 .member-tabset > .nav-tabs > li.active {
-  border-bottom: 4px solid #E95420;
+  border-bottom: 4px solid #3459e6;
   position: relative;
 }
 
