--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -59,7 +59,7 @@
             </tab>
 
             <tab heading='Edit photos'>
-               
+               <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
