--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,20 +2,64 @@
 	<h2 class="text-center text-primary">Sign up</h2>
 	<hr />
 
-	<app-text-input [formControl]="registerForm.controls['username']" label='Username'></app-text-input>
+	<div class="form-group">
+		<label class="control-label" style="margin-right: 10px">Gender: </label>
+		<label class="radio-inline">
+			<input type="radio" value="male" formControlName="gender" /> Male
+		</label>
+		<label class="radio-inline">
+			<input
+				type="radio"
+				style="margin-left: 3px"
+				value="female"
+				formControlName="gender"
+			/>
+			Female
+		</label>
+	</div>
+
+	<app-text-input
+		[formControl]="registerForm.controls['username']"
+		label="Username"
+	></app-text-input>
+
+	<app-text-input
+		[formControl]="registerForm.controls['knownAs']"
+		label="Known As"
+	></app-text-input>
+
+	<app-date-input
+		[formControl]="registerForm.controls['dateOfBirth']"
+		label="Date Of Birth"
+		[maxDate]="maxDate"
+	></app-date-input>
+
+	<app-text-input
+		[formControl]="registerForm.controls['suburb']"
+		label="Suburb"
+	></app-text-input>
+
+	<app-text-input
+		[formControl]="registerForm.controls['street']"
+		label="Street"
+	></app-text-input>
+
 	<app-text-input
 		[formControl]="registerForm.controls['password']"
-		label='Password'
+		label="Password"
 		[type]="'password'"
 	></app-text-input>
+
 	<app-text-input
 		[formControl]="registerForm.controls['confirmPassword']"
-		label='Confirm Password'
+		label="Confirm Password"
 		[type]="'password'"
 	></app-text-input>
 
 	<div class="form-group text-center">
 		<button class="btn btn-success mr-2" type="submit">Register</button>
-		<button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
+		<button class="btn btn-default mr-2" type="button" (click)="cancel()">
+			Cancel
+		</button>
 	</div>
 </form>
