--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -16,15 +16,27 @@
 
 		<div class="form-group px-2">
 			<label>Gender: </label>
-			<select name="gender" style="width: 130px;" class="form-control ml-1" [(ngModel)]="userParams.gender">
-				 <option *ngFor="let gender of genderList" [value]="gender.value">
-					 {{gender.display}}
-				 </option>
+			<select name="gender" style="width: 130px" class="form-control ml-1" [(ngModel)]="userParams.gender">
+				<option *ngFor="let gender of genderList" [value]="gender.value">
+					{{ gender.display }}
+				</option>
 			</select>
 		</div>
 
 		<button class="btn btn-primary ml-1" type="submit">Apply</button>
 		<button class="btn btn-info ml-1" type="submit" (click)="resetFilters()">Reset</button>
+
+		<!-- sort -->
+		<div class="col">
+			<div class="btn-group float-right">
+				<button class="btn btn-primary" type="button" name="orderBy" (click)="loadMembers()" btnRadio="lastActive" [(ngModel)]="userParams.orderBy">
+					Last Active
+				</button>
+				<button class="btn btn-primary" type="button" name="orderBy" (click)="loadMembers()" btnRadio="created" [(ngModel)]="userParams.orderBy">
+					Newest
+				</button>
+			</div>
+		</div>
 	</form>
 </div>
 
