--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,12 +1,10 @@
 <div class="row" *ngIf="member">
-	<div class="col-4">
+	<div class="col-3">
 		<div class="card">
-			<img
-				src="{{ member.photoUrl || './assets/user.png' }}"
-				alt="{{ member.knownAs }}"
-				class="card-img-top img-thumbnail"
-				class="card-img-top img-thumbnail"
-			/>
+			<div class="card-image">
+				<img src="{{ member.photoUrl || './assets/user.png' }}" alt="{{ member.knownAs }}" class="card-img-top img-thumbnail" />
+			</div>
+
 			<div class="card-body">
 				<div>
 					<strong>Location:</strong>
@@ -38,16 +36,16 @@
 		</div>
 	</div>
 
-	<div class="col-8">
-		<tabset class="member-tabset">
-			<tab heading="About {{ member.knownAs }}">
+	<div class="col-9">
+		<tabset class="member-tabset" #memberTabs>
+			<tab heading="About {{ member.knownAs }}" (selectTab)="onTabActivated($event)">
 				<h4>Description</h4>
 				<p>{{ member.introduction }}</p>
 				<h4>Looking for</h4>
 				<p>{{ member.lookingFor }}</p>
 			</tab>
 
-			<tab heading="Photos">
+			<tab heading="Photos" (selectTab)="onTabActivated($event)">
 				<ngx-gallery
 					[options]="galleryOptions"
 					[images]="galleryImages"
@@ -56,7 +54,9 @@
 				></ngx-gallery>
 			</tab>
 
-			<tab heading="Messages"> </tab>
+			<tab heading="Messages" (selectTab)="onTabActivated($event)">
+				<app-member-messages [messages]="messages"></app-member-messages>
+			</tab>
 		</tabset>
 	</div>
 </div>
