--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row">
 	<div class="col-3">
 		<div class="card">
 			<div class="card-image">
@@ -29,7 +29,7 @@
 				<div class="card-footer">
 					<div class="btn-group d-flex">
 						<button class="btn btn-primary">Like</button>
-						<button class="btn btn-success">Message</button>
+						<button class="btn btn-success" (click)="selectTab(2)">Message</button>
 					</div>
 				</div>
 			</div>
