--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,20 +1,37 @@
 <div class="card">
-	<div class="card-body" #scrollMe style="overflow: scroll; height: 535px" [scrollTop]="scrollMe.scrollHeight">
-		<div *ngIf="messages?.length === 0">No messages just yet.. say "hi" by using the message box below</div>
+	<div
+		class="card-body"
+		#scrollMe
+		style="overflow: scroll; height: 535px"
+		[scrollTop]="scrollMe.scrollHeight"
+	>
+		<div *ngIf="messages?.length === 0">
+			No messages just yet.. say "hi" by using the message box below
+		</div>
 
 		<ul *ngIf="messages?.length > 0" class="chat">
 			<li *ngFor="let message of messages">
 				<!-- refactored to get messages here -->
 				<div>
 					<span class="chat-img float-right">
-						<img class="rounded-circle" src="{{ message.senderPhotoUrl || './assets/user.png' }}" alt="{{ message.senderUsername }}" />
+						<img
+							class="rounded-circle"
+							src="{{ message.senderPhotoUrl || './assets/user.png' }}"
+							alt="{{ message.senderUsername }}"
+						/>
 					</span>
 					<div class="chat-body">
 						<div class="header">
 							<small class="text-muted">
 								<span class="fa fa-clock-o">{{ message.dateSend | timeago }}</span>
-								<span class="text-danger" *ngIf="!message.dateRead && message.senderUsername !== username">(unread)</span>
-								<span class="text-success" *ngIf="message.dateRead && message.senderUsername !== username"
+								<span
+									class="text-danger"
+									*ngIf="!message.dateRead && message.senderUsername !== username"
+									>(unread)</span
+								>
+								<span
+									class="text-success"
+									*ngIf="message.dateRead && message.senderUsername !== username"
 									>(read {{ message.dateRead | timeago }})</span
 								>
 							</small>
@@ -27,7 +44,7 @@
 	</div>
 
 	<div class="card-footer">
-		<!-- <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
+		<form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
 			<div class="input-group">
 				<input
 					name="messageContent"
@@ -38,10 +55,11 @@
 					placeholder="Send a private message"
 				/>
 				<div class="input-group-append">
-					<button [disabled]="!messageForm.valid || loading" class="btn btn-primary" type="submit">SEND</button>
-					<i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
+					<button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">
+						SEND
+					</button>
 				</div>
 			</div>
-		</form> -->
+		</form>
 	</div>
 </div>
