--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
 				<li class="nav-item">
 					<a class="nav-link" routerLink="/messages">Messages</a>
 				</li>
+				<li *appHasRole='["Admin", "Moderator"]' class="nav-item">
+					<a class="nav-link" routerLink="/admin">Admin</a>
+				</li>
 			</ng-container>
 
 			<li class="nav-item">
@@ -20,22 +23,13 @@
 			</li>
 		</ul>
 
-		<div
-			class="dropdown"
-			*ngIf="accountService.currentUser$ | async as user"
-			dropdown
-		>
-			<img
-				src="{{ user.photoUrl || './assets/user.png' }}"
-				alt="user.username"
-			/>
+		<div class="dropdown" *ngIf="accountService.currentUser$ | async as user" dropdown>
+			<img src="{{ user.photoUrl || './assets/user.png' }}" alt="user.username" />
 			<a class="dropdown-toggle text-light ml-2" dropdownToggle
-				>Welcome {{ user.knownAs | titlecase }}</a
+				>Welcome {{ user.knownAs || user.username | titlecase }}</a
 			>
 			<div class="dropdown-menu mt-3" *dropdownMenu>
-				<a routerLink="/member/edit" class="dropdown-item"
-					>Edit profile</a
-				>
+				<a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
 				<div class="dropdown-divider"></div>
 				<a class="dropdown-item" (click)="logout()">Logout</a>
 			</div>
@@ -61,9 +55,7 @@
 				type="password"
 				placeholder="Password"
 			/>
-			<button class="btn btn-success my-2 my-sm-0" type="submit">
-				Login
-			</button>
+			<button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
 		</form>
 	</div>
 </nav>
