--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -6,6 +6,9 @@
 			</div>
 
 			<div class="card-body">
+				<div class="mb-2" *ngIf="(presence.onlineUsers$ | async).includes(member.username)">
+					<i class="fa fa-user circle text-success"></i> Online
+				</div>
 				<div>
 					<strong>Location:</strong>
 					<p>{{ member.street }}, {{ member.suburb }}</p>
@@ -55,7 +58,7 @@
 			</tab>
 
 			<tab heading="Messages" (selectTab)="onTabActivated($event)">
-				<app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
+				<app-member-messages [username]="member.username"></app-member-messages>
 			</tab>
 		</tabset>
 	</div>
