--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,16 +1,17 @@
 <div class="card">
-	<div
-		class="card-body"
-		#scrollMe
-		style="overflow: scroll; height: 535px"
-		[scrollTop]="scrollMe.scrollHeight"
-	>
+	<div class="card-body">
 		<div *ngIf="(messageService.messageThread$ | async)?.length === 0">
 			No messages just yet.. say "hi" by using the message box below
 		</div>
 
-		<ul *ngIf="(messageService.messageThread$ | async)?.length > 0" class="chat">
-			<li *ngFor="let message of (messageService.messageThread$ | async)">
+		<ul
+			#scrollMe
+			style="overflow: scroll; height: 500px"
+			[scrollTop]="scrollMe.scrollHeight"
+			*ngIf="(messageService.messageThread$ | async)?.length > 0"
+			class="chat"
+		>
+			<li *ngFor="let message of messageService.messageThread$ | async">
 				<!-- refactored to get messages here -->
 				<div>
 					<span class="chat-img float-right">
