--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -31,8 +31,7 @@
 
 				<div class="card-footer">
 					<div class="btn-group d-flex">
-						<button class="btn btn-primary">Like</button>
-						<button class="btn btn-success" (click)="selectTab(2)">Message</button>
+						<button (click)="selectTab(2)" class="btn btn-success">Message</button>
 					</div>
 				</div>
 			</div>
