--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -12,20 +12,22 @@
 				</button>
 			</li>
 			<li class="list-inline-item">
-				<button class="btn btn-primary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
+				<button (click)="addLike(member)" class="btn btn-primary">
+					<i class="fa fa-heart"></i>
+				</button>
 			</li>
 			<li class="list-inline-item">
 				<button
-					class="btn btn-primary"
 					routerLink="/members/{{ member.username }}"
-					[queryParams]="{ tab: 2 }"
+					[queryParams]="{ tab: 3 }"
+					class="btn btn-primary"
 				>
 					<i class="fa fa-envelope"></i>
 				</button>
 			</li>
 		</ul>
 	</div>
-	<div class="card-body p-2">
+	<div class="card-body p-1">
 		<h6 class="card-title text-center mb-1">
 			<span [class.is-online]="(presence.onlineUsers$ | async).includes(member.username)">
 				<i class="fa fa-user mr-2"></i>
