--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -8,25 +8,14 @@
 			<input type="radio" value="male" formControlName="gender" /> Male
 		</label>
 		<label class="radio-inline">
-			<input
-				type="radio"
-				style="margin-left: 3px"
-				value="female"
-				formControlName="gender"
-			/>
+			<input type="radio" style="margin-left: 3px" value="female" formControlName="gender" />
 			Female
 		</label>
 	</div>
 
-	<app-text-input
-		[formControl]="registerForm.controls['username']"
-		label="Username"
-	></app-text-input>
+	<app-text-input [formControl]="registerForm.controls['username']" label="Username"></app-text-input>
 
-	<app-text-input
-		[formControl]="registerForm.controls['knownAs']"
-		label="Known As"
-	></app-text-input>
+	<app-text-input [formControl]="registerForm.controls['knownAs']" label="Known As"></app-text-input>
 
 	<app-date-input
 		[formControl]="registerForm.controls['dateOfBirth']"
@@ -34,15 +23,9 @@
 		[maxDate]="maxDate"
 	></app-date-input>
 
-	<app-text-input
-		[formControl]="registerForm.controls['suburb']"
-		label="Suburb"
-	></app-text-input>
+	<app-text-input [formControl]="registerForm.controls['suburb']" label="Suburb"></app-text-input>
 
-	<app-text-input
-		[formControl]="registerForm.controls['street']"
-		label="Street"
-	></app-text-input>
+	<app-text-input [formControl]="registerForm.controls['street']" label="Street"></app-text-input>
 
 	<app-text-input
 		[formControl]="registerForm.controls['password']"
@@ -66,8 +49,6 @@
 
 	<div class="form-group text-center">
 		<button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit">Register</button>
-		<button class="btn btn-default mr-2" type="button" (click)="cancel()">
-			Cancel
-		</button>
+		<button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
 	</div>
 </form>
