--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,64 +1,54 @@
 <div class="row">
-	<div class="col-3">
+	<div class="col-4">
 		<div class="card">
-			<div class="card-image">
-				<img src="{{ member.photoUrl || './assets/user.png' }}" alt="{{ member.knownAs }}" class="card-img-top img-thumbnail" />
-			</div>
-
+			<img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+				class="card-img-top img-thumbnail">
 			<div class="card-body">
-				<div class="mb-2" *ngIf="(presence.onlineUsers$ | async).includes(member.username)">
-					<i class="fa fa-user circle text-success"></i> Online
+				<div class="mb-2" *ngIf="(presenceService.onlineUsers$ | async)?.includes(member.userName)">
+					<i class="fa fa-user-circle text-success"></i> Online now
 				</div>
 				<div>
 					<strong>Location:</strong>
-					<p>{{ member.street }}, {{ member.suburb }}</p>
+					<p>{{member.city}}, {{member.country}}</p>
 				</div>
-
 				<div>
 					<strong>Age:</strong>
-					<p>{{ member.age }}</p>
+					<p>{{member.age}}</p>
 				</div>
-
 				<div>
 					<strong>Last active:</strong>
-					<p>{{ member.lastActive | timeago }}</p>
+					<p>{{member.lastActive | timeago}}</p>
 				</div>
-
 				<div>
 					<strong>Member since:</strong>
-					<p>{{ member.created | date: 'longDate' }}</p>
+					<p>{{member.created | date:'dd MMM yyyy'}}</p>
 				</div>
-
-				<div class="card-footer">
-					<div class="btn-group d-flex">
-						<button class="btn btn-primary">Like</button>
-						<button class="btn btn-success" (click)="selectTab(2)">Message</button>
-					</div>
+			</div>
+			<div class="card-footer">
+				<div class="btn-group d-flex">
+					<button class="btn btn-primary">Like</button>
+					<button (click)="selectTab('Messages')" class="btn btn-success">Message</button>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div class="col-9">
+	<div class="col-8">
 		<tabset class="member-tabset" #memberTabs>
-			<tab heading="About {{ member.knownAs }}" (selectTab)="onTabActivated($event)">
+			<tab heading="About {{member.knownAs}}" (selectTab)="onTabActivated($event)">
 				<h4>Description</h4>
-				<p>{{ member.introduction }}</p>
+				<p>{{member.introduction}}</p>
 				<h4>Looking for</h4>
-				<p>{{ member.lookingFor }}</p>
+				<p>{{member.lookingFor}}</p>
 			</tab>
-
-			<tab heading="Photos" (selectTab)="onTabActivated($event)">
-				<ngx-gallery
-					[options]="galleryOptions"
-					[images]="galleryImages"
-					class="ngx-gallery"
-					style="display: inline-block; margin-bottom: 20px"
-				></ngx-gallery>
+			<tab heading="Interests" (selectTab)="onTabActivated($event)">
+				<h4>Interests</h4>
+				<p>{{member.interests}}</p>
 			</tab>
-
+			<tab heading="Photos" #photoTab="tab" (selectTab)="onTabActivated($event)">
+				<gallery *ngIf="photoTab.active" [items]="images" class="gallery"></gallery>
+			</tab>
 			<tab heading="Messages" (selectTab)="onTabActivated($event)">
-				<app-member-messages [username]="member.username"></app-member-messages>
+				<app-member-messages [username]="member.userName"></app-member-messages>
 			</tab>
 		</tabset>
 	</div>
