--- a/client/src/app/errors/test-errors/test-errors.component.html
+++ b/client/src/app/errors/test-errors/test-errors.component.html
@@ -1,28 +1,19 @@
-<ng-container>
-	<button (click)="get500Error()" class="btn btn-outline-primary mr-3">
-		500
-	</button>
-	<button (click)="get400Error()" class="btn btn-outline-primary mr-3">
-		400
-	</button>
-	<button (click)="get401Error()" class="btn btn-outline-primary mr-3">
-		401
-	</button>
-	<button (click)="get404Error()" class="btn btn-outline-primary mr-3">
-		404
-	</button>
-	<button
-		(click)="get400ValidationError()"
-		class="btn btn-outline-primary mr-3"
-	>
-		400Validation
+<div>
+	<button class="btn btn-outline-primary me-3" (click)="get400Error()">Test 400 error</button>
+	<button class="btn btn-outline-primary me-3" (click)="get401Error()">Test 401 error</button>
+	<button class="btn btn-outline-primary me-3" (click)="get404Error()">Test 404 error</button>
+	<button class="btn btn-outline-primary me-3" (click)="get500Error()">Test 500 error</button>
+	<button class="btn btn-outline-primary me-3" (click)="get400ValidationError()">
+		Test 400 Validation error
 	</button>
 
-	<div class="row mt-5" *ngIf="validationErrors.length > 0">
+	@if (validationErrors.length > 0) {
+	<div class="row mt-5">
 		<ul class="text-danger">
-			<li *ngFor="let error of validationErrors">
-				{{ error }}
-			</li>
+			@for (error of validationErrors; track $index) {
+			<li>{{error}}</li>
+			}
 		</ul>
 	</div>
-</ng-container>
+	}
+</div>
