--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -29,8 +29,14 @@
 			</div>
 			<div class="card-footer">
 				<div class="btn-group d-flex">
-					<button class="btn btn-primary">Like</button>
-					<button (click)="selectTab('Messages')" class="btn btn-success">Message</button>
+					<button (click)="toggleLike()" class="btn btn-primary">
+						@if (hasLiked()) {
+							<i class="fa fa-heart ms-2" style="color: red"></i>
+						} @else {
+							<i class="fa fa-heart-o ms-2"></i>
+						}
+						Like</button>
+					<button (click)="selectTab('Messages')" class="btn btn-info">Message</button>
 				</div>
 			</div>
 		</div>
